<?xml version="1.0"?>
<package>
  <name>simple_serial</name>
  <version>0.0.0</version>
  <description>simple_serial</description>

  <maintainer email="spitzer@cmu.edu">Alex Spitzer</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_utils</build_depend>
  <build_depend>parameter_utils</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>quadrotor_srvs</build_depend>
  <build_depend>robot_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_utils</run_depend>
</package>
